# server/src/app/modules/reviews/reviews.routes.ts
@@ -6,13 +6,18 @@ import {
 import { checkUserAccessTokenMiddleware } from '@/app/modules/auth/auth.middlewares';
 import { checkUserExistenceMiddleware } from '@/app/modules/auth/auth.middlewares';
 import { checkAccountStatus } from '@/app/modules/auth/auth.middlewares';
-import { validateReqBody } from '@/app/utils/system.utils';
-import { createReviewSchema } from '@/app/modules/reviews/reviews.schema';
-import { checkReviewEligibilityMiddleware } from '@/app/modules/reviews/reviews.middlewares';
+import { validateReqBody, validateReqParams, validateReqQuery } from '@/app/utils/system.utils';
+import { createReviewSchema, getClubReviewsParamsSchema, getClubReviewsQuerySchema } from '@/app/modules/reviews/reviews.schema';
+import { checkReviewEligibilityMiddleware, checkPublicClubExistenceMiddleware } from '@/app/modules/reviews/reviews.middlewares';
 
 const router = Router();
 
-router.route('/reviews').get(getClubReviewsController);
+router.route('/:clubId').get(
+  validateReqParams(getClubReviewsParamsSchema),
+  checkPublicClubExistenceMiddleware,
+  validateReqQuery(getClubReviewsQuerySchema),
+  getClubReviewsController
+);
 
 router.route('/reviews').post(
   checkUserAccessTokenMiddleware,
